# CPP

BigInt/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing
BigIntOPT/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing  big_integer_testing.cpp  consts.h  myvector_uint.cpp  myvector_uint.h  perf.data
BigintASM/: hello.asm  pipe.asm  sub.asm  test.txt
CPP/: CMakeCache.txt  Makefile  cmake_install.cmake  search  search.cpp
Counts/: Count.asm  CountLines.asm  Test.txt
Cpp/: 1.cpp  CMakeLists.txt  lc.asm  lc.h  search  search.cpp
GUIGrep/QTGrep/: QTGrep.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  searcher.cpp  searcher.h
GUIGrep/build-QTGrep-Desktop-Debug/: QTGrep  moc_mainwindow.cpp  moc_searcher.cpp  ui_mainwindow.h
Huffman/: CMakeLists.txt  HUFFMAN.cbp
Huffman/Tests/: comp4.out  comp5.in  zip0.tmp  zip2.tmp  zip3.out  zip3.tmp  zip4.in  zip4.tmp  zip5.tmp  zip6.tmp
Huffman/huff/: CMakeLists.txt  huffman_coding.cpp  huffman_coding.h  tester
Huffman/utility/: 1.txt  2.txt  CMakeLists.txt  Utility.cpp  Utility.h  utility  zipped_1txt
Huffman_New/huff/: huffman_coding.cpp  huffman_coding.h  tester
List/: my_list.h  std.cpp
List(set)/: CMakeLists.txt  iterators.h  my_list.h  std.cpp  tests.inl
Long/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mul  mul.asm  test.txt
PrintInt/: CMakeLists.txt  PrintInt.asm
Vector/: CMakeLists.txt  counted.cpp  my_vector.h  vector_testing.cpp
WordsCount/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  words
(+6 files in other folders)
